diesel_compile_tests/tests/fail/derive/return_type_helper_errors.stderr
error: cannot find argument corresponding to the generic
  --> tests/fail/derive/return_type_helper_errors.rs:18:14
   |
LL |         fn f<A: SingleValue>(a: <A as TypeWrapper>::Type);
   |              ^

error: cannot find argument corresponding to the generic
  --> tests/fail/derive/return_type_helper_errors.rs:22:14
   |
LL |         fn g<A: SingleValue>(a: <A as TypeWrapper>::Type);
   |              ^
